# aurora-player

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  oauth_loopback.rs  secure_store.rs
src/components/common/: AuroraMark.tsx  Button.tsx  CoverImage.tsx  ErrorBoundary.tsx  ErrorState.tsx  Spinner.tsx  UpdateBanner.tsx  errorKind.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/player/: AlbumArt.tsx  AmbientBackground.tsx  PlayerControls.tsx  ProgressBar.tsx  TrackInfo.tsx  VolumeSlider.tsx
src/components/search/: SearchView.tsx
src/components/settings/: ThemeEditor.tsx  ThemeSwatch.tsx  UpdateSection.tsx
src/config/: env.ts  themes.ts
src/hooks/: useKeyboardShortcuts.ts  usePlaybackPolling.ts
src/lib/: image.ts  pkce.ts
src/services/: ColorExtractor.ts  PlaybackManager.ts  SpotifyApiClient.ts  SpotifyAuthService.ts  ThemeService.ts  UpdateService.ts
src/store/: authStore.ts  libraryStore.ts  playerStore.ts  themeStore.ts  uiStore.ts  updateStore.ts
src/types/: spotify-web-playback.d.ts  spotify.ts  theme.ts
src/views/: LibraryView.tsx  LoginView.tsx  NowPlayingView.tsx  PlaylistDetailView.tsx  SearchView.tsx  SettingsView.tsx
